Hero section completed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -20,7 +20,11 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+} */
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-
-
