leaf animation added

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,8 +23,12 @@ body {
 } */
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-body{
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+html {
+  scroll-behavior: smooth;
 }
