--- a/client/src/styles/Leaves.css
+++ b/client/src/styles/Leaves.css
@@ -1,7 +1,7 @@
 .parent {
   position: relative;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
