fixed parallax effects and used viewport detection

--- a/client/src/styles/Leaves.css
+++ b/client/src/styles/Leaves.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin: 100px 0;
 }
 .leaf1-75,
 .leaf1,
@@ -59,8 +60,8 @@
   }
   100% {
     opacity: 0;
-    top: -200px;
-    right: 250px;
+    top: 0px;
+    right: 310px;
   }
 }
 
@@ -101,9 +102,9 @@
   }
   100% {
     opacity: 0;
-    top: -300px;
-    right: -20px;
-    rotate: -20deg;
+    top: 0px;
+    right: 0px;
+    rotate: 0deg;
   }
 }
 .leaf1-5-forward {
@@ -138,7 +139,7 @@
   }
   100% {
     opacity: 0;
-    top: -200px;
+    top: 0px;
     right: 10px;
   }
 }
@@ -176,8 +177,8 @@
   }
   100% {
     opacity: 0;
-    top: 458px;
-    right: -298px;
+    top: 175px;
+    right: 0px;
   }
 }
 
@@ -218,9 +219,9 @@
   }
   100% {
     opacity: 0;
-    top: 458px;
-    right: -287px;
-    rotate: 30deg;
+    bottom: 150px;
+    right: 0px;
+    rotate: 0deg;
   }
 }
 .leaf4-5-forward {
@@ -260,9 +261,9 @@
   }
   100% {
     opacity: 0;
-    bottom: -214px;
-    right: 50px;
-    rotate: 30deg;
+    bottom: 0px;
+    right: 0px;
+    rotate: 0deg;
   }
 }
 
@@ -303,9 +304,9 @@
   }
   100% {
     opacity: 0;
-    bottom: -242px;
+    bottom: 0px;
     right: 93px;
-    rotate: 10deg;
+    rotate: 0deg;
   }
 }
 
@@ -347,9 +348,9 @@
   }
   100% {
     opacity: 0;
-    bottom: -169px;
-    left: 500px;
-    rotate: -20deg;
+    bottom: 0px;
+    left: 409px;
+    rotate: 0deg;
   }
 }
 .leaf7-5-forward {
@@ -389,9 +390,9 @@
   }
   100% {
     opacity: 0;
-    bottom: -200px;
-    left: -300px;
-    rotate: -10deg;
+    bottom: 0px;
+    left: 0px;
+    rotate: 0deg;
   }
 }
 .leaf7-forward {
@@ -432,9 +433,9 @@
   }
   100% {
     opacity: 0;
-    bottom: -268px;
-    left: -241px;
-    rotate: -10deg;
+    bottom: 0px;
+    left: 250px;
+    rotate: 0deg;
   }
 }
 
@@ -480,8 +481,8 @@
   100% {
     opacity: 0;
     bottom: 165px;
-    left: -246px;
-    rotate: -10deg;
+    left: 0px;
+    rotate: 0deg;
   }
 }
 
@@ -525,9 +526,9 @@
   }
   100% {
     opacity: 0;
-    top: 100px;
-    left: -132px;
-    rotate: -10deg;
+    top: 150px;
+    left: 0px;
+    rotate: 0deg;
   }
 }
 .leaf10-5-forward {
@@ -570,9 +571,9 @@
   }
   100% {
     opacity: 0;
-    top: -210px;
-    left: 50px;
-    rotate: -10deg;
+    top: 150px;
+    left: 0px;
+    rotate: 0deg;
   }
 }
 .leaf10-forward {
@@ -613,9 +614,9 @@
   }
   100% {
     opacity: 0;
-    top: -490px;
-    left: -244px;
-    rotate: 30deg;
+    top: 150px;
+    left: 0px;
+    rotate: 0deg;
   }
 }
 
@@ -654,8 +655,8 @@
   }
   100% {
     opacity: 0;
-    top: -174px;
-    left: 75px;
+    top: 0px;
+    left: 110px;
   }
 }
 .leaf12-forward {
@@ -694,8 +695,8 @@
   }
   100% {
     opacity: 0;
-    top: -186px;
-    left: 440px;
+    top: 0px;
+    left: 455px;
   }
 }
 @media only screen and (max-width: 1000px) {
