--- a/client/src/styles/grass.css
+++ b/client/src/styles/grass.css
@@ -1,6 +1,7 @@
 .stage0{
   position: fixed;
-  width: 99vw;
+  left: 0px !important;
+  width: 100vw;
   height: 869px;
   background-image: url('../assets/grass.png');
   background-size: 100vw 869px;
@@ -8,33 +9,28 @@
 }
 .stage1{
   position: absolute;
-  width: 99vw;
+  left: 0px !important;
+  width: 100vw;
   height: 869px;
   background-image: url('../assets/grass.png');
   background-size: 100vw 869px;
-  top: 2900px;
+  bottom: 2167px;
 }
 .stage2{
   position: fixed;
-  width: 99vw;
+  left: 0px !important;
+  width: 100vw;
   height: 869px;
   background-image: url('../assets/grass.png');
   background-size: 100vw 869px;
-  bottom: -150px;
+  bottom: -194px;
 }
-.stage3{
-  position: absolute;
-  width: 99vw;
-  height: 869px;
-  background-image: url('../assets/grass.png');
-  background-size: 100vw 869px;
-  top: 4950px;
-}
-.stage4{
+/* .stage4{
   position: fixed;
-  width: 99vw;
+  left: 0px !important;
+  width: 100vw;
   height: 869px;
   background-image: url('../assets/grass.png');
   background-size: 100vw 869px;
   bottom: 0px;
-}
+} */
