mobile responsive changes

--- a/client/src/styles/grass.css
+++ b/client/src/styles/grass.css
@@ -14,7 +14,7 @@
   height: 869px;
   background-image: url('../assets/grass.png');
   background-size: 100vw 869px;
-  bottom: 2167px;
+  bottom: -232px;
 }
 .stage2{
   position: fixed;
@@ -34,3 +34,61 @@
   background-size: 100vw 869px;
   bottom: 0px;
 } */
+@media only screen and (max-width: 1200px){
+  .stage0{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: -869px;
+  }
+  .stage1{
+    position: absolute;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: 47px;
+  }
+  .stage2{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: -194px;
+  }
+}
+@media only screen and (max-width: 900px){
+  .stage0{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: -869px;
+  }
+  .stage1{
+    position: absolute;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: 1118px;
+  }
+  .stage2{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 100vw 869px;
+    bottom: -10px;
+  }
+}
