--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,6 +29,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   width: 100vw;
+  background-color: #F5FCE7;
 }
 html {
   scroll-behavior: smooth;
