added form validation and fixed bugs in shipping and checkout page

--- a/client/src/styles/Landing.css
+++ b/client/src/styles/Landing.css
@@ -24,4 +24,14 @@
   } */
 
   /* FEATURES */
-  
+::-webkit-scrollbar{
+    width: 4px;
+  }
+::-webkit-scrollbar-track{
+    background:  #ACD2AE;
+    border-radius: 50px;
+  }
+::-webkit-scrollbar-thumb{
+    background: #00584A;
+    border-radius: 50px;
+  }
