fixed parallax effects

--- a/client/src/styles/grass.css
+++ b/client/src/styles/grass.css
@@ -34,7 +34,7 @@
   background-size: 100vw 869px;
   bottom: 0px;
 } */
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1100px){
   .stage0{
     position: fixed;
     left: 0px !important;
@@ -82,7 +82,7 @@
     background-size: 1300px 869px;
     bottom: -230px;
   }
-  .stage2{
+  .stage3{
     position: fixed;
     left: 0px !important;
     width: 100vw;
@@ -93,5 +93,31 @@
   }
 }
 @media only screen and (max-width:600px){
-
+  .stage0{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 1300px 869px;
+    bottom: -869px;
+  }
+  .stage1{
+    position: absolute;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 1300px 869px;
+    bottom: -230px;
+  }
+  .stage2{
+    position: fixed;
+    left: 0px !important;
+    width: 100vw;
+    height: 869px;
+    background-image: url('../assets/grass.png');
+    background-size: 1300px 869px;
+    bottom: 0px;
+  }
 }
