--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,3 +34,14 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
